--- a/k4ProjectTemplate/CMakeLists.txt
+++ b/k4ProjectTemplate/CMakeLists.txt
@@ -39,7 +39,7 @@ function(set_test_env _testname)
     LD_LIBRARY_PATH=${CMAKE_BINARY_DIR}:$<TARGET_FILE_DIR:k4ProjectTemplatePlugins>:$<TARGET_FILE_DIR:ROOT::Core>:$<TARGET_FILE_DIR:k4FWCore::k4FWCore>:$<TARGET_FILE_DIR:EDM4HEP::edm4hep>:$<TARGET_FILE_DIR:podio::podio>:$ENV{LD_LIBRARY_PATH}
     PYTHONPATH=${CMAKE_BINARY_DIR}/${CMAKE_PROJECT_NAME}/genConfDir:$<TARGET_FILE_DIR:k4FWCore::k4FWCore>/../python:$ENV{PYTHONPATH}
     PATH=$<TARGET_FILE_DIR:k4FWCore::k4FWCore>/../bin:$ENV{PATH}
-    K4PROJECTTEMPLATE=${CMAKE_CURRENT_LIST_DIR}/
+    k4ProjectTemplate=${CMAKE_CURRENT_LIST_DIR}/
     )
 endfunction()
 
