--- a/k4ProjectTemplate/CMakeLists.txt
+++ b/k4ProjectTemplate/CMakeLists.txt
@@ -29,6 +29,8 @@ gaudi_add_module(k4ProjectTemplatePlugins
                       ROOT::Hist
                       ROOT::Tree
                       ROOT::Physics
+                      OnnxRuntime
+                      torch
                       )
 
 install(TARGETS k4ProjectTemplatePlugins
