debugged onnx integration

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,8 +36,8 @@ find_package(Gaudi)
 
 # make sure the onnx find script is found:
 set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
-find_package(OnnxRuntime)
-if(OnnxRuntime_FOUND)
+find_package(onnxruntime REQUIRED)
+if(onnxruntime_FOUND)
   message("ONNX Runtime inference library found.")
 else()
   message("ONNX Runtime not found!")
