--- a/k4ProjectTemplate/CMakeLists.txt
+++ b/k4ProjectTemplate/CMakeLists.txt
@@ -27,6 +27,7 @@ gaudi_add_module(k4ProjectTemplatePlugins
                  LINK Gaudi::GaudiKernel
                       k4FWCore::k4FWCore
                       EDM4HEP::edm4hep
+                      EDM4HEP::utils
                       DD4hep::DDCore
                       DD4hep::DDRec
                       ROOT::Core
