--- a/k4JetTagger/CMakeLists.txt
+++ b/k4JetTagger/CMakeLists.txt
@@ -22,7 +22,7 @@ include_directories(${CMAKE_SOURCE_DIR}/src/components)
 find_package(ROOT REQUIRED COMPONENTS Core Hist Tree Physics)
 
 file(GLOB _plugin_sources src/components/*.cpp)
-gaudi_add_module(k4ProjectTemplatePlugins
+gaudi_add_module(k4JetTaggerPlugins
                  SOURCES ${_plugin_sources}
                  LINK Gaudi::GaudiKernel
                       k4FWCore::k4FWCore
@@ -38,7 +38,7 @@ gaudi_add_module(k4ProjectTemplatePlugins
                       torch
                       )
 
-install(TARGETS k4ProjectTemplatePlugins
+install(TARGETS k4JetTaggerPlugins
   EXPORT ${CMAKE_PROJECT_NAME}Targets
   RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}" COMPONENT bin
   LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}" COMPONENT shlib
@@ -49,26 +49,26 @@ include(CTest)
 
 function(set_test_env _testname)
   set_property(TEST ${_testname} APPEND PROPERTY ENVIRONMENT
-    LD_LIBRARY_PATH=${CMAKE_BINARY_DIR}:$<TARGET_FILE_DIR:k4ProjectTemplatePlugins>:$<TARGET_FILE_DIR:ROOT::Core>:$<TARGET_FILE_DIR:k4FWCore::k4FWCore>:$<TARGET_FILE_DIR:EDM4HEP::edm4hep>:$<TARGET_FILE_DIR:podio::podio>:$ENV{LD_LIBRARY_PATH}
+    LD_LIBRARY_PATH=${CMAKE_BINARY_DIR}:$<TARGET_FILE_DIR:k4JetTaggerPlugins>:$<TARGET_FILE_DIR:ROOT::Core>:$<TARGET_FILE_DIR:k4FWCore::k4FWCore>:$<TARGET_FILE_DIR:EDM4HEP::edm4hep>:$<TARGET_FILE_DIR:podio::podio>:$ENV{LD_LIBRARY_PATH}
     PYTHONPATH=${CMAKE_BINARY_DIR}/${CMAKE_PROJECT_NAME}/genConfDir:$<TARGET_FILE_DIR:k4FWCore::k4FWCore>/../python:$ENV{PYTHONPATH}
     PATH=$<TARGET_FILE_DIR:k4FWCore::k4FWCore>/../bin:$ENV{PATH}
-    k4ProjectTemplate=${CMAKE_CURRENT_LIST_DIR}/
+    k4JetTagger=${CMAKE_CURRENT_LIST_DIR}/
     )
 endfunction()
 
 add_test(NAME CreateExampleEventData
                WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
-               COMMAND k4run k4ProjectTemplate/options/createExampleEventData.py)
+               COMMAND k4run k4JetTagger/options/createExampleEventData.py)
 set_test_env(CreateExampleEventData)
 
 add_test(NAME ReadExampleEventData
                WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
-               COMMAND k4run k4ProjectTemplate/options/readExampleEventData.py)
+               COMMAND k4run k4JetTagger/options/readExampleEventData.py)
 set_test_env(ReadExampleEventData)
 set_property(TEST ReadExampleEventData APPEND PROPERTY DEPENDS CreateExampleEventData)
 
 add_test(NAME HelloWorldAlg
                WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
-               COMMAND k4run k4ProjectTemplate/options/createHelloWorld.py)
+               COMMAND k4run k4JetTagger/options/createHelloWorld.py)
 set_test_env(HelloWorldAlg)
 
