--- a/.gitignore
+++ b/.gitignore
@@ -250,3 +250,7 @@ test/k4FWCoreTest/**/*.root
 test/inputFiles/*.slcio
 test/gaudi_opts/testConverterConstants.py
 
+## Extra section
+k4MLJetTagger/extras/submit_to_condor/*.sub
+k4MLJetTagger/extras/submit_to_condor/*.cc
+
